syntax = "proto3";

package proto;

import "define.proto";

option go_package = "./;proto";

message RegionSearch {
    bool is_entered = 13;
    uint32 progress = 5;
    RegionSearchState state = 2;
    uint32 region_search_id = 8;
}

message RegionSearchInfo {
    uint32 id = 5;
    repeated RegionSearch region_search_list = 1;
    bool is_entered = 7;
}

message RegionSearchNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5626;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    repeated RegionSearchInfo region_search_list = 1;
    uint32 uid = 8;
}

message RegionSearchChangeRegionNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5618;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    enum RegionEvent {
        REGION_EVENT_NONE = 0;
        REGION_EVENT_ENTER = 1;
        REGION_EVENT_LEAVE = 2;
    }

    RegionEvent event = 1;
    uint32 region_id = 10;
}

message TakeRegionSearchRewardReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5625;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 search_id = 3;
    uint32 id = 15;
}

message TakeRegionSearchRewardRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5607;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 search_id = 14;
    uint32 id = 1;
    int32 retcode = 5;
}

message GetRegionSearchReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5602;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }
}
